--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <div class="container"> 
                 <header>
-                    <h1 class="presentation"><br>Hola! Soy <strong> Roberto <br> Velasquez</strong> <strong> <br> Front-end</strong> & <br>Analista de <strong> TI</strong> 
+                    <h1 class="presentation"><br>Hola! Soy <strong> Roberto <br> Velasquez</strong>,<strong> <br> Front-end</strong> & <br>Analista de <strong> TI</strong> 
                     </h1>
 
                     <h1 class="presentation-responsive"><br><strong>Front-end</strong> & <br>Analista de <strong> TI</strong> 
