--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- 1ER CONTENEDOR -->
             
             <figure class="logo">
-                <img src ="assets/logo/roriginal.jpg" height="100px" alt="logo Rescata_">
+                <img src ="assets/logo/roriginal.jpg" height="100px" alt="logo Rescata_" class="logoRescata">
             </figure>
             
             <nav class="menu">
