--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         
                         <p class="project-description">
                             El diplomado de CS50 pretende desarrollar en el Aprendiz un pensamiento algorítmico y de resolución de problemas, de manera eficiente, mediante código. Los temas incluyen abstracción, algoritmos, estructuras de datos, encapsulación, administración de recursos, seguridad, ingeniería de software y programación web. 
-                            Los lenguajes incluyen C, Python y SQL, además de HTML, CSS y JavaScript. Un conjunto de problemas inspirados en las artes, las humanidades, las ciencias sociales y en las ciencias en general (Incluye proyecto final).
+                            Los lenguajes incluyen C, Python y SQL, además de HTML, CSS y JavaScript. Un conjunto de problemas inspirados en las artes, las humanidades, las ciencias sociales y en las ciencias en general.
                         </p>
                     </div>
                     
