--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <small>
                                 <form>
                                     <label for="fecha">
-                                        <strong>¿What date is today?</strong>
+                                        <strong>What date is today?</strong>
                                     </label>
                                     <input type="date" id="fecha">
                                 </form>
