--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </h1>
                 </header>
                 
-                <img class="hero-image" src="assets/images/setup7.jpg" width="580" height="300" alt="Debe ponerse imagen de mi persona en el portafolio real">
+                <img class="hero-image" src="assets/images/piscina.jpg" width="580" height="300" alt="Debe ponerse imagen de mi persona en el portafolio real">
             </div>
             
         </section> 
