--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <h1 class="presentation"><br>Hello! I'am <strong> Roberto <br> Velasquez</strong>, <br> Data <strong>Analyst </strong><br> 
                     </h1>
 
-                    <h1 class="presentation-responsive"><br><strong>Front-end</strong> & <br><strong>IT </strong> Analyst 
+                    <h1 class="presentation-responsive"><br>Data<br><strong>Analyst</strong> 
                     </h1>
                 </header>
                 
