--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </p>
                         
                         <p class="project-description">
-                            The Google Certificate aims to develop an immersive understanding of the practices and processes used by a junior or associate data analyst in their daily work. She will be able to learn key analytical skills (data cleaning, analysis and visualization) and tools (spreadsheets, SQL, R programming, Tableau). You'll also understand how to clean and organize data for analysis, and complete analyzes and calculations using spreadsheets, SQL programming, and R. Finally, you'll learn how to visualize and present data findings in commonly used dashboards, presentations, and visualization platforms.
+                            The Google Certificate aims to develop an immersive understanding of the practices and processes used by a junior or associate data analyst in their daily work. You will be able to learn key analytical skills like: data cleaning, analysis and visualization; as well, tools like: spreadsheets, SQL, R programming, Tableau. You'll also understand how to clean and organize data for analysis, and complete analyzes and calculations using spreadsheets, SQL programming, and R. Finally, you'll learn how to visualize and present data findings in commonly used dashboards, presentations, and visualization platforms.
                         </p>
                     </div>
                     
