--- a/index.html
+++ b/index.html
@@ -355,6 +355,8 @@
                         <p class="project-description">
                             The EF Standard English Test (EF SET) is the world’s first completely free, online standardized English test for learners of all levels, from beginner to advanced. As part of EF Education First, we draw upon a 50-year legacy of academic excellence, having helped more than 20 million people across the world to successfully learn English.
                         </p>
+                                                      
+                        <a class="experience-url" href="https://www.efset.org/cert/rgjQm1" target="_blank">Check it out!</a> 
                     </div>
                     
                     <figure class="project-imageContainer">
