--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
                     </article>
                     
-                    <article class="experience">
+                    <!-- <article class="experience">
 
                         <figure class="experience-imageContainer">
                             <img class="experience-image" src="assets/images/html udemy.jpg" width="500" height="370" alt="Debe ponerse imagen referente a un evento, al que haya asistido, en el portafolio real">
@@ -289,7 +289,7 @@
                             <a class="experience-url" href="https://www.udemy.com/certificate/UC-2a48f555-18e5-48ef-a189-f3c1c96cc25d/" target="_blank">Check it out!</a> 
                         </div>
 
-                    </article>
+                    </article> -->
                     
                     <article class="experience">
 
