--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                             </header>
                             
                             <p class="experience-description"> 
-                               Before using any database technology, you must understand the design and modeling fundamentals required for you to have the best architecture possible. Create your own database models with best practices from scratch. Skills: General Database Theory, Relational Databases and Introduction to non-relational databases.
+                               Obtaining a certificate of completion from Platzi that guarantees basic knowledge as a relational database manager. Before using any database technology, you must understand the design and modeling fundamentals required for you to have the best architecture possible. Create your own database models with best practices from scratch. Skills: General Database Theory, Relational Databases and Introduction to non-relational databases.
                             </p>
                             
                             <a class="experience-url" href="https://platzi.com/p/robertovelasquezdean/curso/1566-course/diploma/detalle/" target="_blank">Check it out!</a> 
