--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                 <div class="social">
                     <a href="https://twitter.com/Rescata__" class="social-link twitter" target="_blank"></a>
                     <a href="https://web.facebook.com/louizroberto/" class="social-link facebook" target="_blank"></a>
-                    <a href="https://github.com/Rescata1995" class="social-link github" target="_blank"></a>
+                    <a href="https://github.com/Rescata1995/Programming-Journal-by-R" class="social-link github" target="_blank"></a>
                     <a href="https://www.instagram.com/velasquezdean/?hl=es-la" class="social-link instagram" target="_blank"></a>
                 </div>
                 
