--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         
                         <p class="project-url">
                             <small>
-                                <strong>My progress linked to Github: </strong> <a href="https://github.com/Rescata1995/Programming-Journal-by-R/tree/main/Google/Google%20Data%20Analytics%20Professional%20Certificate" target="_blank"> Rescata1995/Google </a> 
+                                <strong>My progress linked to Github: </strong> <a href="https://github.com/Rescata1995/Programming-Journal-by-R/tree/main/Google" target="_blank"> Rescata1995/Google </a> 
                             </small>
                         </p>
                         
