--- a/index.html
+++ b/index.html
@@ -363,8 +363,7 @@
                                 </h3>
                             </header>
                             
-                            <p class="experience-description"> Obtaining a Platzi completion certificate that guarantees fundamental knowledge in the management of version control software known as GIT, with which you will be empowered to save or register all the editions of your coding projects carried out, these ideally worked in harmony with a work team. Skills: Carry out version control in your projects with Git & Github and work collaboratively, comfortably and efficiently as a team.
-                            </p>
+                            <p class="experience-description"> Obtaining a Platzi completion certificate that guarantees fundamental knowledge in the management of version control software known as GIT, with which it is empowered to save or register all the editions of your coding projects carried out, these ideally worked in harmony with a work team. Skills: Carry out version control in your projects with Git & Github and work collaboratively, comfortably and efficiently as a team. </p>
                             
                             <a class="experience-url" href="https://platzi.com/p/robertovelasquezdean/curso/1557-course/diploma/detalle/" target="_blank">Take a look!</a> 
                         </div>
