--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Roberto Velasquez's official web portfolio; Data Analyst. If you are reading this, it is a good sign for me. Welcome!">
+    <meta name="description" content="Roberto Velasquez Dean's official web portfolio; Data Analyst. If you are reading this, it is a good sign for me. Welcome!">
     
     <meta name="author" content="Roberto Velasquez Dean">
 
