--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                             </header>
                             
                             <p class="experience-description">
-                             With Tableau you are going to be able to explore, experiment, correct, prepare and present data in an easy, fast and attractive way. Keep track all my mock and real vizzes from Tableau in here, go ahead! Skills: Connect Tableau to a Variety of Datasets; Analyze, Combine, Join, Calculate Data & Visualize Data in the Form of Various Charts and Maps.
+                             With Tableau you are going to be able to explore, experiment, correct, prepare and present data in an easy, fast and attractive way. </p> <p class="experience-description">Keep track all my mock and real vizzes from Tableau in here, go ahead! Skills: Connect Tableau to a Variety of Datasets; Analyze, Combine, Join, Calculate Data & Visualize Data in the Form of Various Charts and Maps.
                             </p>
                             
                             <a class="experience-url" href="https://public.tableau.com/app/profile/roberto3417#!/?newProfile=true&activeTab=0" target="_blank">Take a look!</a> 
