--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                                 </h3>
                             </header>
                             
-                            <p class="experience-description"> Obtaining a certificate of completion from Platzi that guarantees knowledge in managing spreadsheets, using the Excel tool, with the aim of storing data of regular size for later analysis, drawing conclusions, visualization and efficient decision making. Through the organization and classification of data, the staff will be trained to generate and cross-reference information, improving accounting and financial management processes. Skills: Build Databases, Cross information, Analyze pivot tables, Automate procedures.
+                            <p class="experience-description"> Obtaining a certificate of completion from Platzi that guarantees knowledge in managing spreadsheets, using the Excel tool, with the aim of storing data of regular size for later analysis, drawing conclusions, visualization and efficient decision making. Through the organization and classification of data, the staff will be trained to generate and cross-reference information, improving accounting and financial management processes. <em> Skills: Build Databases, Cross information, Analyze pivot tables, Automate procedures. </em>
                             </p>
                             
                             <a class="experience-url" href="https://platzi.com/p/robertovelasquezdean/curso/1275-excel-analisis-datos/diploma/detalle/" target="_blank">Take a look!</a> 
