--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                         </div>
                         
                         <figure class="project-imageContainer">
-                            <video src="assets/videos/What is the EF Standard English Test (EFSET)_.mp4" controls muted loop poster="assets/images/EF1.jpg" class="html-video" width="1280" height="720"></video>
+                            <video src="assets/videos/What is the EF Standard English Test (EFSET)_.mp4" controls muted loop poster="assets/images/EF1.png" class="html-video" width="1280" height="720"></video>
                         </figure>
                     
                 </article>
