--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                     <article class="experience">
 
                         <figure class="experience-imageContainer">
-                            <img class="experience-image" src="assets/images/tableau-practica1.jpg" width="500" height="370" alt="Debe ponerse imagen referente a un evento, al que haya asistido, en el portafolio real">
+                            <img class="experience-image" src="assets/images/tableau1.png" width="500" height="370" alt="Debe ponerse imagen referente a un evento, al que haya asistido, en el portafolio real">
                         </figure>
                         
                         <div class="experience-detail">
