--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 
             <div class="container"> 
                 <header>
-            <div class="linkedin1" data-locale="es_ES" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="rescata" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://co.linkedin.com/in/rescata?trk=profile-badge"></a></div>
+            <div id= "linkedin" class="badge-base LI-profile-badge" data-locale="es_ES" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="rescata" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://co.linkedin.com/in/rescata?trk=profile-badge"></a></div>
+              
                             
               <!--
                     <h1 class="presentation"><br>Hello! I'am <strong> Roberto <br> Velasquez</strong>, <br> Data <strong>Analyst </strong><br> 
