--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         
                         <p class="project-url">
                             <small>
-                                <strong>Check my Data Analytics certificate on your own: </strong> <a href="https://www.coursera.org/account/accomplishments/professional-cert/CD2NGX6UKXEM" target="_blank"> Google Data Analytics Professional Certificate</a> 
+                                <strong>Check my certificate on your own: </strong> <a href="https://www.coursera.org/account/accomplishments/professional-cert/CD2NGX6UKXEM" target="_blank"> Google Data Analytics Professional Certificate</a> 
                             </small>
                         </p>
                         
