--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <div class="container"> 
                 <header>
-            <div id="linkedin" class="badge-base LI-profile-badge" data-locale="es_ES" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="rescata" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://co.linkedin.com/in/rescata?trk=profile-badge">Roberto Velasquez</a></div>
+            <div id="linkedin" class="badge-base LI-profile-badge" data-locale="es_ES" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="rescata" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://co.linkedin.com/in/rescata?trk=profile-badge"></a></div>
                      
                             
               <!--
