--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                     <a href="https://twitter.com/Rescata__" class="social-link twitter" target="_blank"></a>
                     <a href="https://web.facebook.com/louizroberto/" class="social-link facebook" target="_blank"></a>
                     <a href="https://github.com/Rescata1995" class="social-link github" target="_blank"></a>
-                    <a href="https://www.instagram.com/velasquezdean/?hl=es-la" class="social-link instagram" target="_blank"></a>
+                    <a href="https://www.linkedin.com/in/rescata/" class="social-link linkedin" target="_blank"></a>                                                                                                         
                 </div>
                  
                 <div id="linkedin-responsive" class="badge-base LI-profile-badge" data-locale="es_ES" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="rescata" data-version="v1">
