--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <h1 class="presentation"><br>Hello! I'am <strong> Roberto <br> Velasquez</strong>, <br> Data <strong>Analyst </strong><br> 
                     </h1>    -->  
                    
-                   <h1 class="presentation"><br>Hello There! <strong> this </strong> is <br> <strong> Roberto Velasquez </strong>, <br> Data <strong> Analyst </strong><br> 
+                   <h1 class="presentation"><br>Hello There! <strong> this </strong> is <br> <strong> Roberto Velasquez</strong>, <br> as a Data <strong> Analyst </strong><br> 
                     </h1> 
                     
                     <h1 class="presentation-responsive"><br>Data<br><strong>Analyst</strong> 
